[project]
name = "propresenter-custom-bibles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "lxml>=6.0.0",
    "prompt-toolkit>=3.0.51",
    "pyinstaller>=6.14.2",
    "regex>=2024.11.6",
    "requests>=2.32.4",
    "tdqm>=0.0.1",
]
